server/kubernetes/scc-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scc-broker
  template:
    metadata:
      labels:
        component: scc-broker
    spec:
      containers:
        -
          name: scc-broker
          image: 'socketcluster/scc-broker:v9.3.0'
          ports:
            -
              name: scc-broker
              containerPort: 8888
          readinessProbe:
            httpGet:
              path: /health-check
              port: scc-broker
            initialDelaySeconds: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health-check
              port: scc-broker
            initialDelaySeconds: 15
            timeoutSeconds: 20
