server/kubernetes/scc-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scc-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scc-worker
  template:
    metadata:
      labels:
        component: scc-worker
    spec:
      containers:
        -
          name: scc-worker
          image: 'socketcluster/socketcluster:v20.0.2'
          ports:
            -
              name: scc-worker
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health-check
              port: scc-worker
            initialDelaySeconds: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health-check
              port: scc-worker
            initialDelaySeconds: 15
            timeoutSeconds: 20
          volumeMounts:
            -
              mountPath: /usr/src/app
              name: app-src-volume
      volumes:
        -
          name: app-src-volume
          emptyDir: {}
