server/kubernetes/scc-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scc-broker
spec:
  type: ClusterIP
  ports:
    -
      port: 8888
      targetPort: 8888
  selector:
    component: scc-broker
