server/kubernetes/scc-state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scc-state
spec:
  type: ClusterIP
  ports:
    -
      port: 7777
      targetPort: 7777
  selector:
    component: scc-state
